welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value &&
  if (temp>=60)&&((temp<=90 && isSummer==false)||(temp<=100 && isSummer==true)){
               ^